Release 0.3.2
- Handle null entries in stream DecodeParms entry (as per spec)

Release 0.3.1
- Add Tie :array-or-item trait. For the common case, where a
  single item or array of items is permitted.`
- add tmp/ directory for test JSON files, etc
- Adjust for 'pdf' -> 'ast' in PDF::Grammar 0.1.6.
- Changed the top level node from 'pdf' to 'cos' in JSON
  serializations
- Handle utf-16 encoding in PDF::COS::DateString

Release 0.3.0
- Renamed PDF::DAO classess to PDF::COS, where COS stands for
  Carousel Object System (see
  https://en.wikipedia.org/wiki/Portable_Document_Format#File_structure)
- Improvements to PDF::COS.coerce($obj, $type) multi methods.
- Fixed class-level PDF::COS::Stream.gist
- Support Hybrid PDFs that contain both cross refence tables and streams

Release 0.2.8
- [PDF::DAO]
  -- better support for lists and list to array coercion
- [PDF::DAO::Loader]
  -- replaced :$fallback option with :$base-class
- [PDF::DAO::Tie]
  -- add mixin method

Release 0.2.7
- [PDF::DAO::Tie]
  -- reintroduce method :entry(:alias<foo>) sub-trait.
  -- remove type-check method

Release 0.2.6
- [PDF::DAO::Util] setup libpdf at BEGIN time
- Rename or hide overused load() method in various classes/roles
  -- [PDF::DAO] [PDF::DAO::Loader] deprecate load() -> load-delegate()
  -- [PDF::Reader] rename load() -> load-pdf()
  -- [PDF::IO::Crypt] made load() method private
- Fix PNG predictors for BitsPerComponent < 8 (issue #18)

Release 0.2.5
- [PDF::Reader][PDF::Writer]
  -- adjust to PDF::Grammar v0.1.1 shaped cross reference streams.
  -- upgrade index offsets from uint32 to uint64 (for PDF files > 4.2Gb)
  -- don't escape binary characters when writing literal strings
- [PDF::DAO::Util]
  -- add coercements for typed arrays

Release 0.2.4
- [PDF]
  renamed .save-as :update option to :preserve
- Created classes PDF::DAO::Loader and PDF::DAO::Coercer. These
  replace the PDF::DAO::Delegator class.
- [PDF::DAO::Type::Xref]
  streamlined index decoding and encoding