@@ -16,11 +16,11 @@ for :$in-ioh, :$in-str {
     is $input.read(4).decode("latin-1"), "%PDF", "$test read";
     lives-ok {$input.seek(1, SeekFromCurrent);}, "$test seek";
     is $input.read(3).decode("latin-1"), "1.3", "$test read";
-    is $input.substr(1, 5), 'PDF-1', "$test head substr";
+    is $input.byte-str(1, 5), 'PDF-1', "$test head byte-str";
     nok $input.eof, "$test not at eof yet";
     $input.read(9999);
     ok $input.eof, "$test now at eof";
-    is $input.substr(*-4), '%EOF', "$test tail substr";
+    is $input.byte-str(*-4), '%EOF', "$test tail byte-str";
     lives-ok { $input.close }, "$test close";
 }
 
