@@ -1,5 +1,6 @@
 Release 0.3.2
 - Handle null entries in stream DecodeParms entry (as per spec)
+- Rename PDF::IO.substr() method to byte-str()
 
 Release 0.3.1
 - Add Tie :array-or-item trait. For the common case, where a
